--- a/user_guide/general/routing.html
+++ b/user_guide/general/routing.html
@@ -88,7 +88,7 @@ permits you to specify your own routing criteria. Routes can either be specified
 
 <p>A typical wildcard route might look something like this:</p>
 
-<code>$route['product/:num'] = "catalog/product_lookup";</code>
+<code>$route['product/(:num)'] = "catalog/product_lookup";</code>
 
 <p>In a route, the array key contains the URI to be matched, while the array value  contains the destination it should be re-routed to.
 In the above example, if the literal word "product" is found in the first segment of the URL, and a number is found in the second segment,
