Adds updating routing to change log

--- a/user_guide/changelog.html
+++ b/user_guide/changelog.html
@@ -64,6 +64,11 @@ Change Log
 Hg Tag: n/a</p>
 
 <ul>
+	<li>General Changes
+		<ul>
+			<li class="reactor"><a href="general/routing.html">Routes</a> can now be associated with an HTTP Request Method.</li>
+		</ul>
+	</li>
 	<li>Libraries
 		<ul>
 			<li class="reactor">Added <kbd>decimal</kbd>, <kbd>less_than</kbd> and <kbd>greater_than</kbd> rules to the <a href="libraries/form_validation.html">Form validation Class</a>.</li>
