Updates docs with accurate header information

--- a/user_guide/general/routing.html
+++ b/user_guide/general/routing.html
@@ -162,7 +162,7 @@ are encouraged to always have a default route otherwise a 404 page will appear b
 
 <code>&lt;input type="hidden" name="_method" value="PUT" /&gt;</code>
 
-<p>For more advanced applications, you can set the <dfn>X-HTTP-METHOD-OVERRIDE</dfn> header to the desired request method.</p>
+<p>For more advanced applications, you can set the <dfn>X-METHOD-OVERRIDE</dfn> header to the desired request method.</p>
 
 
 </div>
